fix overlapping for barrier for multiplier and also fix current spot label shape

--- a/sass/components/_barrier.scss
+++ b/sass/components/_barrier.scss
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+.barrier {
+    height: 0px;
+}
+
 .barrier-area {
     padding: 13px 0;
 }
